created mobile menu + adaptived header

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 					<div class="header__nav">
 						<nav class="header__menu">
-							<ul class="header__menu-list">
+							<ul class="header__menu-list" id="menu-list">
 								<li class="header__menu-item">
 									<a href="#" class="header__menu-link">
 										About us
@@ -58,6 +58,13 @@
 							</button>
 							<button role="button" class="header__btn-login">
 								Login in / Register
+							</button>
+						</div>
+						<div class="header__burger">
+							<button role="button" id="menu-btn" class="menu-btn">
+								<span></span>
+								<span></span>
+								<span></span>
 							</button>
 						</div>
 					</div>
