adapted first section + fixed menu

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<div class="container">
 					<div class="first__body">
 
-						<div class="fitst__content">
+						<div class="first__content">
 							<div class="first__showreel">
 								<button role="button" class="first__btn-play" id="btn-play">
 									<span class="text-none">Play</span>
@@ -114,6 +114,47 @@
 							</ul>
 						</div>
 
+					</div>
+				</div>
+			</section>
+			<section class="about">
+				<div class="container">
+					<div class="about__body">
+						<div class="about__image">
+							<img src="img/about-image.png" alt="About photo">
+						</div>
+						<div class="about__text">
+							<h3 class="about__subtitle subtitle">
+								Who we are
+							</h3>
+							<h2 class="about__title title">
+								Why Createx?
+							</h2>
+							<ul class="about__list">
+								<li class="about__item">
+									A fermentum in morbi pretium aliquam adipiscing donec tempus.
+								</li>
+								<li class="about__item">
+									Vulputate placerat amet pulvinar lorem nisl.
+								</li>
+								<li class="about__item">
+									Consequat feugiat habitant gravida quisque elit bibendum id adipiscing sed.
+								</li>
+								<li class="about__item">
+									Etiam duis lobortis in fames ultrices commodo nibh.
+								</li>
+								<li class="about__item">
+									Tincidunt sagittis neque sem ac eget.
+								</li>
+								<li class="about__item">
+									Ultricies amet justo et eget quisque purus vulputate dapibus tortor.
+								</li>
+								<li class="about__item">
+									A fermentum in morbi pretium aliquam adipiscing donec tempus.
+								</li>
+							</ul>
+							<button class="about__btn btn" role="button">More about us</button>
+						</div>
 					</div>
 				</div>
 			</section>
