added about section + adaptive

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 							</ul>
 						</nav>
 						<div class="header__btns">
-							<button role="button" class="header__btn-consalt">
+							<button role="button" class="btn-orange header__btn-consalt ">
 								Get consultation
 							</button>
-							<button role="button" class="header__btn-login">
+							<button role="button" class=" header__btn-login">
 								Login in / Register
 							</button>
 						</div>
@@ -88,8 +88,8 @@
 								Enjoy studying with Createx Online Courses
 							</h1>
 							<div class="first__btns">
-								<button role="button" class="first__btn">About us</button>
-								<button role="button" class="first__btn">Explore courses</button>
+								<button role="button" class="btn first__btn">About us</button>
+								<button role="button" class="btn-orange first__btn">Explore courses</button>
 							</div>
 						</div>
 
@@ -124,10 +124,10 @@
 							<img src="img/about-image.png" alt="About photo">
 						</div>
 						<div class="about__text">
-							<h3 class="about__subtitle subtitle">
+							<h3 class="subtitle about__subtitle">
 								Who we are
 							</h3>
-							<h2 class="about__title title">
+							<h2 class="title about__title">
 								Why Createx?
 							</h2>
 							<ul class="about__list">
@@ -153,7 +153,7 @@
 									A fermentum in morbi pretium aliquam adipiscing donec tempus.
 								</li>
 							</ul>
-							<button class="about__btn btn" role="button">More about us</button>
+							<button class="btn-orange about__btn" role="button">More about us</button>
 						</div>
 					</div>
 				</div>
