added section Featured + adaptive

--- a/index.html
+++ b/index.html
@@ -158,6 +158,125 @@
 					</div>
 				</div>
 			</section>
+			<section class="featured">
+				<div class="container">
+					<div class="featured__body">
+						<div class="featured__top">
+							<div class="featured__heading">
+								<h3 class="subtitle featured__subtitle">
+									Ready to learn?
+								</h3>
+								<h2 class="title featured__title">
+									Featured Courses
+								</h2>
+							</div>
+							<button class="btn featured__btn">View all the courses</button>
+						</div>
+						<div class="featured__courses">
+							<ul class="featured__list">
+								<li class="featured__item featured-item">
+									<div class="featured-item__photo">
+										<img src="img/featured/image-1.png" alt="Teacher 1">
+									</div>
+									<div class="featured-item__content">
+										<a href="#" class="featured-item__category category-marketing"><span>Marketing</span></a>
+										<a href="#" class="featured-item__title-link">
+											<h3 class="featured-item__title">
+												The Ultimate Google Ads Training Course
+											</h3>
+										</a>
+										<p class="featured-item__descr">
+											<span class="featured-item__price">$100</span> | by Jerome Bell
+										</p>
+									</div>
+								</li>
+								<li class="featured__item featured-item">
+									<div class="featured-item__photo">
+										<img src="img/featured/image-2.png" alt="Teacher 1">
+									</div>
+									<div class="featured-item__content">
+										<a href="#"
+											class="featured-item__category category-management"><span>Management</span></a>
+										<a href="#" class="featured-item__title-link">
+											<h3 class="featured-item__title">
+												Product Management Fundamentals
+											</h3>
+										</a>
+										<p class="featured-item__descr">
+											<span class="featured-item__price">$480</span> | by Marvin McKinney
+										</p>
+									</div>
+								</li>
+								<li class="featured__item featured-item">
+									<div class="featured-item__photo">
+										<img src="img/featured/image-3.png" alt="Teacher 1">
+									</div>
+									<div class="featured-item__content">
+										<a href="#" class="featured-item__category category-hr"><span>HR & Recruting</span></a>
+										<a href="#" class="featured-item__title-link">
+											<h3 class="featured-item__title">
+												HR Management and Analytics
+											</h3>
+										</a>
+										<p class="featured-item__descr">
+											<span class="featured-item__price">$200</span> | by Leslie Alexander Li
+										</p>
+									</div>
+								</li>
+								<li class="featured__item featured-item">
+									<div class="featured-item__photo">
+										<img src="img/featured/image-4.png" alt="Teacher 1">
+									</div>
+									<div class="featured-item__content">
+										<a href="#" class="featured-item__category category-marketing"><span>Marketing</span></a>
+										<a href="#" class="featured-item__title-link">
+											<h3 class="featured-item__title">
+												Brand Management & PR Communications
+											</h3>
+										</a>
+										<p class="featured-item__descr">
+											<span class="featured-item__price">$530</span> | by Kristin Watson
+										</p>
+									</div>
+								</li>
+								<li class="featured__item featured-item">
+									<div class="featured-item__photo">
+										<img src="img/featured/image-5.png" alt="Teacher 1">
+									</div>
+									<div class="featured-item__content">
+										<a href="#"
+											class="featured-item__category category-management"><span>Management</span></a>
+										<a href="#" class="featured-item__title-link">
+											<h3 class="featured-item__title">
+												Business Development Management
+											</h3>
+										</a>
+										<p class="featured-item__descr">
+											<span class="featured-item__price">$400</span> | by Dianne Russell
+										</p>
+									</div>
+								</li>
+								<li class="featured__item featured-item">
+									<div class="featured-item__photo">
+										<img src="img/featured/image-6.png" alt="Teacher 1">
+									</div>
+									<div class="featured-item__content">
+										<a href="#" class="featured-item__category category-design"><span>Design</span></a>
+										<a href="#" class="featured-item__title-link">
+											<h3 class="featured-item__title">
+												Graphic Design Basic
+											</h3>
+										</a>
+										<p class="featured-item__descr">
+											<span class="featured-item__price">$500</span> | by Guy Hawkins
+										</p>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 
