worked on adaptive and new section
+ adapted old sections
+ create a new section
+ worked on tab with JavaScript

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 					</div>
 
 					<div class="header__nav">
+						<div class="header__burger">
+							<button role="button" id="menu-btn" class="menu-btn">
+								<span></span>
+								<span></span>
+								<span></span>
+							</button>
+						</div>
 						<nav class="header__menu">
 							<ul class="header__menu-list" id="menu-list">
 								<li class="header__menu-item">
@@ -58,13 +65,6 @@
 							</button>
 							<button role="button" class=" header__btn-login">
 								Login in / Register
-							</button>
-						</div>
-						<div class="header__burger">
-							<button role="button" id="menu-btn" class="menu-btn">
-								<span></span>
-								<span></span>
-								<span></span>
 							</button>
 						</div>
 					</div>
@@ -271,6 +271,48 @@
 											<span class="featured-item__price">$500</span> | by Guy Hawkins
 										</p>
 									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="benefits">
+				<div class="container">
+					<div class="benefits__body">
+						<h3 class="subtitle benefits__subtitle">
+							Our benefits
+						</h3>
+						<h2 class="title benefits__title">
+							That’s how we do it
+						</h2>
+						<div class="benefits__tabs">
+							<ul class="benefits__tab-link-list">
+								<li class="benefits__tab-link" data-tab="tab-1">
+									Experienced Tutors
+								</li>
+								<li class="benefits__tab-link " data-tab="tab-2">
+									Feedback & Support
+								</li>
+								<li class="benefits__tab-link" data-tab="tab-3">
+									24/7 Online Library
+								</li>
+								<li class="benefits__tab-link" data-tab="tab-4">
+									Community
+								</li>
+							</ul>
+							<ul class="benefits__tab-list">
+								<li class="benefits__tab-item" id="tab-1">
+									Tab 1
+								</li>
+								<li class="benefits__tab-item hidden" id="tab-2">
+									Tab 2
+								</li>
+								<li class="benefits__tab-item hidden" id="tab-3">
+									Tab 3
+								</li>
+								<li class="benefits__tab-item hidden" id="tab-4">
+									Tab 4
 								</li>
 							</ul>
 						</div>
