added some styles and scripts for tabs

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 						</h2>
 						<div class="benefits__tabs">
 							<ul class="benefits__tab-link-list">
-								<li class="benefits__tab-link" data-tab="tab-1">
+								<li class="benefits__tab-link active" data-tab="tab-1">
 									Experienced Tutors
 								</li>
 								<li class="benefits__tab-link " data-tab="tab-2">
@@ -302,17 +302,69 @@
 								</li>
 							</ul>
 							<ul class="benefits__tab-list">
-								<li class="benefits__tab-item" id="tab-1">
-									Tab 1
+								<li class="benefits__tab-item active " id="tab-1">
+									<div class="tab-item__text">
+										<h2 class="tab-item__title">
+											Only practicing tutors
+										</h2>
+										<p class="tab-item__descr">
+											Urna nisi, arcu cras nunc. Aenean quam est lobortis mi non fames dictum suspendisse.
+											Morbi mauris cras massa ut dolor quis sociis mollis augue. Nunc, sodales tortor sit
+											diam mi amet massa. Fermentum diam diam sociis vestibulum. Nulla nisl accumsan, id
+											dignissim massa ut amet. Amet enim, nisi tempus vehicula.
+										</p>
+									</div>
+									<div class="tab-item__image">
+										<img src="img/benefits-image.png" alt="tutors">
+									</div>
 								</li>
-								<li class="benefits__tab-item hidden" id="tab-2">
-									Tab 2
+								<li class="benefits__tab-item" id="tab-2">
+									<div class="tab-item__text">
+										<h2 class="tab-item__title">
+											Feedback and support on every steps
+										</h2>
+										<p class="tab-item__descr">
+											Urna nisi, arcu cras nunc. Aenean quam est lobortis mi non fames dictum suspendisse.
+											Morbi mauris cras massa ut dolor quis sociis mollis augue. Nunc, sodales tortor sit
+											diam mi amet massa. Fermentum diam diam sociis vestibulum. Nulla nisl accumsan, id
+											dignissim massa ut amet. Amet enim, nisi tempus vehicula.
+										</p>
+									</div>
+									<div class="tab-item__image">
+										<img src="img/first/image.png" alt="tutors">
+									</div>
 								</li>
-								<li class="benefits__tab-item hidden" id="tab-3">
-									Tab 3
+								<li class="benefits__tab-item" id="tab-3">
+									<div class="tab-item__text">
+										<h2 class="tab-item__title">
+											A huge database and library available 24/7
+										</h2>
+										<p class="tab-item__descr">
+											Urna nisi, arcu cras nunc. Aenean quam est lobortis mi non fames dictum suspendisse.
+											Morbi mauris cras massa ut dolor quis sociis mollis augue. Nunc, sodales tortor sit
+											diam mi amet massa. Fermentum diam diam sociis vestibulum. Nulla nisl accumsan, id
+											dignissim massa ut amet. Amet enim, nisi tempus vehicula.
+										</p>
+									</div>
+									<div class="tab-item__image">
+										<img src="img/benefits-image.png" alt="tutors">
+									</div>
 								</li>
-								<li class="benefits__tab-item hidden" id="tab-4">
-									Tab 4
+								<li class="benefits__tab-item" id="tab-4">
+									<div class="tab-item__text">
+										<h2 class="tab-item__title">
+											Keep in touch with teammates and people from all the round of the world
+										</h2>
+										<p class="tab-item__descr">
+											Urna nisi, arcu cras nunc. Aenean quam est lobortis mi non fames dictum suspendisse.
+											Morbi mauris cras massa ut dolor quis sociis mollis augue. Nunc, sodales tortor sit
+											diam mi amet massa. Fermentum diam diam sociis vestibulum. Nulla nisl accumsan, id
+											dignissim massa ut amet. Amet enim, nisi tempus vehicula.
+										</p>
+									</div>
+									<div class="tab-item__image">
+										<img src="img/first/image.png" alt="tutors">
+									</div>
 								</li>
 							</ul>
 						</div>
