add some changes

--- a/index.html
+++ b/index.html
@@ -289,15 +289,27 @@
 						<div class="benefits__tabs">
 							<ul class="benefits__tab-link-list">
 								<li class="benefits__tab-link active" data-tab="tab-1">
+									<svg class="svg">
+										<use xlink:href="img/sprite.svg#star"></use>
+									</svg>
 									Experienced Tutors
 								</li>
 								<li class="benefits__tab-link " data-tab="tab-2">
+									<svg class="svg">
+										<use xlink:href="img/sprite.svg#like"></use>
+									</svg>
 									Feedback & Support
 								</li>
 								<li class="benefits__tab-link" data-tab="tab-3">
+									<svg class="svg">
+										<use xlink:href="img/sprite.svg#lib"></use>
+									</svg>
 									24/7 Online Library
 								</li>
 								<li class="benefits__tab-link" data-tab="tab-4">
+									<svg class="svg">
+										<use xlink:href="img/sprite.svg#community"></use>
+									</svg>
 									Community
 								</li>
 							</ul>
