added events section

--- a/index.html
+++ b/index.html
@@ -383,6 +383,110 @@
 					</div>
 				</div>
 			</section>
+			<section class="events">
+				<div class="container">
+					<div class="events__body">
+						<h3 class="subtitle events__subtitle">
+							Our events
+						</h3>
+						<h2 class="title events__title">
+							Lectures & workshops
+						</h2>
+						<ul class="events__list">
+							<li class="events__item">
+								<div class="events-item__date">
+									<p class="events-item__day">
+										05
+									</p>
+									<div class="events-item__column">
+										<p class="events-item__mounth">
+											August
+										</p>
+										<p class="events-item__time">
+											11:00 - 14:00
+										</p>
+									</div>
+
+								</div>
+								<div class="events-item__text">
+									<a href="#" class="">
+										<h3 class="events-item__title">
+											Formation of the organizational structure of the company in the face of uncertainty.
+										</h3>
+									</a>
+									<p class="events-item__descr">
+										Onine master-class
+									</p>
+								</div>
+
+								<a href="#" class="btn events-item__link">View more</a>
+							</li>
+							<li class="events__item">
+								<div class="events-item__date">
+									<p class="events-item__day">
+										24
+									</p>
+									<div class="events-item__column">
+										<p class="events-item__mounth">
+											July
+										</p>
+										<p class="events-item__time">
+											11:00 - 12:30
+										</p>
+									</div>
+
+								</div>
+								<div class="events-item__text">
+									<a href="#" class="">
+										<h3 class="events-item__title">
+											Building a customer service department. Best Practices.
+										</h3>
+									</a>
+									<p class="events-item__descr">
+										Onine lecture
+									</p>
+								</div>
+
+								<a href="#" class="btn events-item__link">View more</a>
+							</li>
+							<li class="events__item">
+								<div class="events-item__date">
+									<p class="events-item__day">
+										17
+									</p>
+									<div class="events-item__column">
+										<p class="events-item__mounth">
+											July
+										</p>
+										<p class="events-item__time">
+											10:00 - 13:00
+										</p>
+									</div>
+
+								</div>
+								<div class="events-item__text">
+
+									<a href="#" class="">
+										<h3 class="events-item__title">
+											How to apply methods of speculative design in practice. Worldbuilding prototyping.</h3>
+									</a>
+									<p class="events-item__descr">
+										Onine master-class
+									</p>
+								</div>
+
+								<a href="#" class="btn events-item__link">View more</a>
+							</li>
+						</ul>
+						<div class="events-footer">
+							<h3 class="events-footer__title">
+								Do you want more?
+							</h3>
+							<a href="#" class="btn-orange events-footer__link">Explore all events</a>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 
