added section Certificate

--- a/index.html
+++ b/index.html
@@ -487,6 +487,57 @@
 					</div>
 				</div>
 			</section>
+
+			<section class="certificate">
+				<div class="container">
+					<div class="certificate__body">
+						<div class="certificate__content">
+							<h3 class="subtitle certificate__subtitle">
+								Createx certificate
+							</h3>
+							<h2 class="title certificate__title">
+								Your expertise will be confirmed
+							</h2>
+							<p class="certificate__descr">
+								We are accredited by international professional organizations and institutes:
+							</p>
+							<ul class="certificate__link-list">
+								<li class="certificate__link-item">
+									<a href="#" class="">
+										<img src="img/icon/delMar.png" alt="">
+									</a>
+								</li>
+								<li class="certificate__link-item">
+									<a href="#" class="">
+										<img src="img/icon/sentinal.png" alt="">
+									</a>
+								</li>
+								<li class="certificate__link-item">
+									<a href="#" class="">
+										<img src="img/icon/national.png" alt="">
+									</a>
+								</li>
+							</ul>
+						</div>
+						<div class="certificate__image">
+							<img src="img/certificate.png" alt="">
+						</div>
+					</div>
+
+				</div>
+			</section>
+			<section class="team">
+				<div class="container">
+					<div class="team__body">
+						<h3 class="subtitle team__subtitle">
+							Best tutors are all here
+						</h3>
+						<h2 class="title team__title">
+							Meet our team
+						</h2>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 
