--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	<title>CreateX - Online course</title>
@@ -117,6 +118,7 @@
 					</div>
 				</div>
 			</section>
+
 			<section class="about">
 				<div class="container">
 					<div class="about__body">
@@ -158,6 +160,7 @@
 					</div>
 				</div>
 			</section>
+
 			<section class="featured">
 				<div class="container">
 					<div class="featured__body">
@@ -277,6 +280,7 @@
 					</div>
 				</div>
 			</section>
+
 			<section class="benefits">
 				<div class="container">
 					<div class="benefits__body">
@@ -284,7 +288,7 @@
 							Our benefits
 						</h3>
 						<h2 class="title benefits__title">
-							That’s how we do it
+							That's how we do it
 						</h2>
 						<div class="benefits__tabs">
 							<ul class="benefits__tab-link-list">
@@ -383,6 +387,7 @@
 					</div>
 				</div>
 			</section>
+
 			<section class="events">
 				<div class="container">
 					<div class="events__body">
@@ -526,6 +531,7 @@
 
 				</div>
 			</section>
+
 			<section class="team">
 				<div class="container">
 					<div class="team__body">
@@ -535,6 +541,272 @@
 						<h2 class="title team__title">
 							Meet our team
 						</h2>
+						<!-- Slider main container -->
+						<div class="swiper team__slider">
+							<!-- Additional required wrapper -->
+							<div class="swiper-wrapper team__slider-wrapper">
+								<!-- Slides -->
+								<div class="swiper-slide team__slide">
+									<div class="team-slide__card">
+										<div class="team-slide__photo">
+											<img src="img/team/image-1.png" alt="">
+										</div>
+										<div class="team-slide__social">
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#fb"></use>
+												</svg>
+											</a>
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#inst"></use>
+												</svg>
+											</a>
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#in"></use>
+												</svg>
+											</a>
+										</div>
+									</div>
+									<div class="team-slide__text">
+										<h3 class="team-slide__name">
+											Dianne Russell
+										</h3>
+										<p class="team-slide__proff">
+											Founder and CEO
+										</p>
+									</div>
+								</div>
+								<div class="swiper-slide team__slide">
+									<div class="team-slide__card">
+										<div class="team-slide__photo">
+											<img src="img/team/image-2.png" alt="">
+										</div>
+										<div class="team-slide__social">
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#fb"></use>
+												</svg>
+											</a>
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#inst"></use>
+												</svg>
+											</a>
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#in"></use>
+												</svg>
+											</a>
+										</div>
+									</div>
+									<div class="team-slide__text">
+										<h3 class="team-slide__name">
+											Jerome Bell
+										</h3>
+										<p class="team-slide__proff">
+											Founder and Program Director
+										</p>
+									</div>
+								</div>
+								<div class="swiper-slide team__slide">
+									<div class="team-slide__card">
+										<div class="team-slide__photo">
+											<img src="img/team/image-3.png" alt="">
+										</div>
+										<div class="team-slide__social">
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#fb"></use>
+												</svg>
+											</a>
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#inst"></use>
+												</svg>
+											</a>
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#in"></use>
+												</svg>
+											</a>
+										</div>
+									</div>
+									<div class="team-slide__text">
+										<h3 class="team-slide__name">
+											Kristin Watson
+										</h3>
+										<p class="team-slide__proff">
+											Marketer, Curator of Marketing Course
+										</p>
+									</div>
+								</div>
+								<div class="swiper-slide team__slide">
+									<div class="team-slide__card">
+										<div class="team-slide__photo">
+											<img src="img/team/image-4.png" alt="">
+										</div>
+										<div class="team-slide__social">
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#fb"></use>
+												</svg>
+											</a>
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#inst"></use>
+												</svg>
+											</a>
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#in"></use>
+												</svg>
+											</a>
+										</div>
+									</div>
+									<div class="team-slide__text">
+										<h3 class="team-slide__name">
+											Marvin McKinney
+										</h3>
+										<p class="team-slide__proff">
+											PM, Curator of Management Course
+										</p>
+									</div>
+								</div>
+								<div class="swiper-slide team__slide">
+									<div class="team-slide__card">
+										<div class="team-slide__photo">
+											<img src="img/team/image-5.png" alt="">
+										</div>
+										<div class="team-slide__social">
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#fb"></use>
+												</svg>
+											</a>
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#inst"></use>
+												</svg>
+											</a>
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#in"></use>
+												</svg>
+											</a>
+										</div>
+									</div>
+									<div class="team-slide__text">
+										<h3 class="team-slide__name">
+											Tony Stark
+										</h3>
+										<p class="team-slide__proff">
+											Founder and CEO
+										</p>
+									</div>
+								</div>
+								<div class="swiper-slide team__slide">
+									<div class="team-slide__card">
+										<div class="team-slide__photo">
+											<img src="img/team/image-6.png" alt="">
+										</div>
+										<div class="team-slide__social">
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#fb"></use>
+												</svg>
+											</a>
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#inst"></use>
+												</svg>
+											</a>
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#in"></use>
+												</svg>
+											</a>
+										</div>
+									</div>
+									<div class="team-slide__text">
+										<h3 class="team-slide__name">
+											Steve Rogers
+										</h3>
+										<p class="team-slide__proff">
+											Founder and Program Director
+										</p>
+									</div>
+								</div>
+								<div class="swiper-slide team__slide">
+									<div class="team-slide__card">
+										<div class="team-slide__photo">
+											<img src="img/team/image-7.png" alt="">
+										</div>
+										<div class="team-slide__social">
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#fb"></use>
+												</svg>
+											</a>
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#inst"></use>
+												</svg>
+											</a>
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#in"></use>
+												</svg>
+											</a>
+										</div>
+									</div>
+									<div class="team-slide__text">
+										<h3 class="team-slide__name">
+											Peter Parker
+										</h3>
+										<p class="team-slide__proff">
+											Marketer, Curator of Marketing Course
+										</p>
+									</div>
+								</div>
+								<div class="swiper-slide team__slide">
+									<div class="team-slide__card">
+										<div class="team-slide__photo">
+											<img src="img/team/image-8.png" alt="">
+										</div>
+										<div class="team-slide__social">
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#fb"></use>
+												</svg>
+											</a>
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#inst"></use>
+												</svg>
+											</a>
+											<a href="#" class="team-slide__link">
+												<svg class="team-svg">
+													<use xlink:href="img/sprite.svg#in"></use>
+												</svg>
+											</a>
+										</div>
+									</div>
+									<div class="team-slide__text">
+										<h3 class="team-slide__name">
+											Natasha Romanoff
+										</h3>
+										<p class="team-slide__proff">
+											PM, Curator of Management Course
+										</p>
+									</div>
+								</div>
+							</div>
+							<!-- If we need navigation buttons -->
+							<div class="swiper-button-prev team__slide-btn-prev"></div>
+							<div class="swiper-button-next team__slide-btn-next"></div>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -543,7 +815,7 @@
 
 		</footer>
 	</div>
-
+	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 
