added testimonials section

--- a/index.html
+++ b/index.html
@@ -810,6 +810,139 @@
 					</div>
 				</div>
 			</section>
+
+			<section class="testimonials">
+				<div class="container">
+					<div class="testimonials__body">
+						<h3 class="subtitle testimonials__subtitle">
+							Testimonials
+						</h3>
+						<h2 class="title testimonials__title">
+							What our students say
+						</h2>
+						<!-- Главный контейнер слайдера-->
+						<div class="swiper testimonials__slider">
+							<!-- Обязательная оболочка слайдера-->
+							<div class="swiper-wrapper testimonials-slider__slider-wrapper">
+								<!-- Слайды слайдера-->
+								<div class="swiper-slide testimonials__slide">
+									<p class="testimonials-slide__descr">
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo, amet lectus quam viverra
+										mus lobortis fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae id turpis tempus
+										ornare turpis quis non. Congue tortor in euismod vulputate etiam eros. Pulvinar neque
+										pharetra arcu diam maecenas diam integer in.
+									</p>
+									<div class="testimonials-slide__person">
+										<div class="testimonials-slide__photo">
+											<img src="img/testimonials-user.png" alt="" class="">
+										</div>
+										<div class="testimonials-slide__info">
+											<h3 class="testimonials-slide__name">
+												Eleanor Pena
+											</h3>
+											<p class="testimonials-slide__proff">
+												Position, Course
+											</p>
+										</div>
+									</div>
+								</div>
+								<div class="swiper-slide testimonials__slide">
+									<p class="testimonials-slide__descr">
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo, amet lectus quam viverra
+										mus lobortis fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae id turpis tempus
+										ornare turpis quis non. Congue tortor in euismod vulputate etiam eros. Pulvinar neque
+										pharetra arcu diam maecenas diam integer in.
+									</p>
+									<div class="testimonials-slide__person">
+										<div class="testimonials-slide__photo">
+											<img src="img/testimonials-user-2.jpg" alt="" class="">
+										</div>
+										<div class="testimonials-slide__info">
+											<h3 class="testimonials-slide__name">
+												Mandalorian
+											</h3>
+											<p class="testimonials-slide__proff">
+												Position, Course
+											</p>
+										</div>
+									</div>
+								</div>
+								<div class="swiper-slide testimonials__slide">
+									<p class="testimonials-slide__descr">
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo, amet lectus quam viverra
+										mus lobortis fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae id turpis tempus
+										ornare turpis quis non. Congue tortor in euismod vulputate etiam eros. Pulvinar neque
+										pharetra arcu diam maecenas diam integer in.
+									</p>
+									<div class="testimonials-slide__person">
+										<div class="testimonials-slide__photo">
+											<img src="img/testimonials-user-3.jpg" alt="" class="">
+										</div>
+										<div class="testimonials-slide__info">
+											<h3 class="testimonials-slide__name">
+												Baby Grogu
+											</h3>
+											<p class="testimonials-slide__proff">
+												Position, Course
+											</p>
+										</div>
+									</div>
+								</div>
+
+								<div class="swiper-slide testimonials__slide">
+									<p class="testimonials-slide__descr">
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo, amet lectus quam viverra
+										mus lobortis fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae id turpis tempus
+										ornare turpis quis non. Congue tortor in euismod vulputate etiam eros. Pulvinar neque
+										pharetra arcu diam maecenas diam integer in.
+									</p>
+									<div class="testimonials-slide__person">
+										<div class="testimonials-slide__photo">
+											<img src="img/testimonials-user.png" alt="" class="">
+										</div>
+										<div class="testimonials-slide__info">
+											<h3 class="testimonials-slide__name">
+												Eleanor Pena
+											</h3>
+											<p class="testimonials-slide__proff">
+												Position, Course
+											</p>
+										</div>
+									</div>
+								</div>
+								<div class="swiper-slide testimonials__slide">
+									<p class="testimonials-slide__descr">
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo, amet lectus quam viverra
+										mus lobortis fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae id turpis tempus
+										ornare turpis quis non. Congue tortor in euismod vulputate etiam eros. Pulvinar neque
+										pharetra arcu diam maecenas diam integer in.
+									</p>
+									<div class="testimonials-slide__person">
+										<div class="testimonials-slide__photo">
+											<img src="img/testimonials-user.png" alt="" class="">
+										</div>
+										<div class="testimonials-slide__info">
+											<h3 class="testimonials-slide__name">
+												Eleanor Pena
+											</h3>
+											<p class="testimonials-slide__proff">
+												Position, Course
+											</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<!--Добавляем если нужны строчки управления-->
+							<div class="swiper-button-prev testimonials__slider-btn-prev"></div>
+							<div class="swiper-button-next testimonials__slider-btn-next"></div>
+
+							<!--Добавляем если нужна пагинация (буллеты, цифры)-->
+							<div class="swiper-pagination testimonials__slider-pagination"></div>
+						</div>
+					</div>
+				</div>
+			</section>
+
 		</main>
 		<footer class="footer">
 
