added section Blog and Subscribe

--- a/index.html
+++ b/index.html
@@ -943,6 +943,155 @@
 				</div>
 			</section>
 
+			<section class="blog">
+				<div class="container">
+					<div class="blog__body">
+						<div class="blog__header">
+							<div class="blog__heading">
+								<h3 class="subtitle blog__subtitle">
+									Our Blog
+								</h3>
+								<h2 class="title blog__title">
+									Latest posts
+								</h2>
+							</div>
+							<a href="" class="btn-orange blog__btn">Go to blog</a>
+						</div>
+						<div class="blog__content">
+							<ul class="blog__list">
+								<li class="blog__item">
+									<div class="blog-item__photo">
+										<a href="#" class="blog-item__category">
+											<span><img src="img/icon/podcast.svg" alt=""></span>
+											Podcast
+										</a>
+										<div class="blog-item__image">
+											<img src="img/blog/image-1.png" alt="">
+										</div>
+
+									</div>
+
+									<div class="blog-item__info">
+										<a href="#" class="blog-item__proff">
+											Marketing
+										</a>
+										<p class="blog-item__date">
+											September 4, 2020
+										</p>
+										<p class="blog-item__time">
+											36 min
+										</p>
+									</div>
+
+									<div class="blog-item__text">
+										<h2 class="blog-item__title">
+											What is traffic arbitrage and does it really make money?
+										</h2>
+										<p class="blog-item__descr">
+											Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis proin dignissim
+											lacus, purus gravida...
+										</p>
+										<a href="#" class="blog-item__link">
+											Listen
+										</a>
+									</div>
+								</li>
+								<li class="blog__item">
+									<div class="blog-item__photo">
+										<a href="#" class="blog-item__category">
+											<span><img src="img/icon/video.svg" alt=""></span>
+											Video
+										</a>
+										<div class="blog-item__image">
+											<img src="img/blog/image-2.png" alt="" class="">
+										</div>
+
+									</div>
+
+									<div class="blog-item__info">
+										<a href="#" class="blog-item__proff">
+											Management
+										</a>
+										<p class="blog-item__date">
+											August 25, 2020
+										</p>
+										<p class="blog-item__time">
+											45 min
+										</p>
+									</div>
+
+									<div class="blog-item__text">
+										<h2 class="blog-item__title">
+											What to do and who to talk to if you want to get feedback on the product.
+										</h2>
+										<p class="blog-item__descr">
+											Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis proin dignissim
+											lacus, purus gravida...
+										</p>
+										<a href="#" class="blog-item__link">
+											Watch
+										</a>
+									</div>
+								</li>
+								<li class="blog__item">
+									<div class="blog-item__photo">
+										<a href="#" class="blog-item__category">
+											<span><img src="img/icon/article.svg" alt=""></span>
+											Article
+										</a>
+										<div class="blog-item__image">
+											<img src="img/blog/image-3.png" alt="">
+										</div>
+									</div>
+
+									<div class="blog-item__info">
+										<a href="#" class="blog-item__proff">
+											Design
+										</a>
+										<p class="blog-item__date">
+											September 4, 2020
+										</p>
+										<p class="blog-item__time">
+											36 min
+										</p>
+									</div>
+
+									<div class="blog-item__text">
+										<h2 class="blog-item__title">
+											What is traffic arbitrage and does it really make money?
+										</h2>
+										<p class="blog-item__descr">
+											Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis proin dignissim
+											lacus, purus gravida...
+										</p>
+										<a href="#" class="blog-item__link">
+											Listen
+										</a>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="subscribe">
+				<div class="container">
+					<div class="subscribe__body">
+						<h3 class="subtitle subscribe__subtitle">
+							Don't miss anything
+						</h3>
+						<h2 class="title subscribe__title">
+							Subscribe to the Createx School announcements
+						</h2>
+						<div class="subscribe__mail">
+							<input type="email" name="" id="" class="subscribe__mail-input" placeholder="Your working email">
+							<button role="button" class=" btn-orange subscribe__mail-btn">Subscribe</button>
+						</div>
+
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 
