--- a/index.html
+++ b/index.html
@@ -1094,7 +1094,147 @@
 			</section>
 		</main>
 		<footer class="footer">
+			<div class="container">
+				<div class="footer__body">
+					<div class="footer-content">
+						<div class="footer-column footer-top">
+							<a href="#" class="footer-top__logo">
+								<img src="img/logo-footer.svg" alt="">
+							</a>
+							<p class="footer-top__descr">
+								Createx Online School is a leader in online studying. We have lots of courses and programs from
+								the
+								main market experts. We provide relevant approaches to online learning, internships and
+								employment
+								in the largest companies in the country.
+							</p>
+							<ul class="footer-top__social-list">
+								<li class="footer-top__social-item">
+									<a href="#" class="footer-top__social-link">
+										<img src="img/icon/fb.svg" alt="">
+									</a>
+								</li>
+								<li class="footer-top__social-item">
+									<a href="#" class="footer-top__social-link">
+										<img src="img/icon/tw.svg" alt="">
+									</a>
+								</li>
+								<li class="footer-top__social-item">
+									<a href="#" class="footer-top__social-link">
+										<img src="img/icon/youtube.svg" alt="">
+									</a>
+								</li>
+								<li class="footer-top__social-item">
+									<a href="#" class="footer-top__social-link">
+										<img src="img/icon/telegram.svg" alt="">
+									</a>
+								</li>
+								<li class="footer-top__social-item">
+									<a href="#" class="footer-top__social-link">
+										<img src="img/icon/inst.svg" alt="">
+									</a>
+								</li>
+								<li class="footer-top__social-item">
+									<a href="#" class="footer-top__social-link">
+										<img src="img/icon/in.svg" alt="">
+									</a>
+								</li>
+							</ul>
+						</div>
 
+						<div class="footer-column footer-middle">
+							<div class="footer-middle__column">
+								<h3 class="footer-middle__title">
+									Site map
+								</h3>
+								<ul class="footer-middle__list">
+									<li class="footer-middle__item">
+										<a href="#" class="footer-middle__link">About us</a>
+									</li>
+									<li class="footer-middle__item">
+										<a href="#" class="footer-middle__link">Courses</a>
+									</li>
+									<li class="footer-middle__item">
+										<a href="#" class="footer-middle__link">Events</a>
+									</li>
+									<li class="footer-middle__item">
+										<a href="#" class="footer-middle__link">Blog</a>
+									</li>
+									<li class="footer-middle__item">
+										<a href="#" class="footer-middle__link">Contacts</a>
+									</li>
+								</ul>
+							</div>
+
+							<div class="footer-middle__column">
+								<h3 class="footer-middle__title">
+									Courses
+								</h3>
+								<ul class="footer-middle__list">
+									<li class="footer-middle__item">
+										<a href="#" class="footer-middle__link">Marketing</a>
+									</li>
+									<li class="footer-middle__item">
+										<a href="#" class="footer-middle__link">Managment</a>
+									</li>
+									<li class="footer-middle__item">
+										<a href="#" class="footer-middle__link">HR & Recruting</a>
+									</li>
+									<li class="footer-middle__item">
+										<a href="#" class="footer-middle__link">Design</a>
+									</li>
+									<li class="footer-middle__item">
+										<a href="#" class="footer-middle__link">Development</a>
+									</li>
+								</ul>
+							</div>
+
+							<div class="footer-middle__column">
+								<h3 class="footer-middle__title">
+									Contact us
+								</h3>
+								<ul class="footer-middle__list">
+									<li class="footer-middle__item">
+										<a href="tel:405550128" class="footer-middle__phone">(405) 555-0128</a>
+									</li>
+									<li class="footer-middle__item">
+										<a href="mailto:hello@createx.com" class="footer-middle__email">hello@createx.com</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+
+						<div class="footer-column footer-bottom">
+							<h3 class="footer-bottom__title">
+								Sign up to our newsletter
+							</h3>
+							<form action="#" class="footer-bottom__form" method="post">
+								<input type="email" class="footer-bottom__email-input" placeholder="Email address">
+								<button class="footer-bottom__email-btn">
+									<img src="img/icon/arrow-search.svg" alt="">
+								</button>
+							</form>
+							<small class="footer-bottom__small">
+								*Subscribe to our newsletter to receive communications and early updates from Createx SEO
+								Agency.
+							</small>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="footer-copyrights">
+				<div class="container">
+					<div class="footer-copyrights__body">
+						<small class="footer-copyrights__text">
+							© All rights reserved. Made with <span class="heart-img"><img src="img/icon/heart.svg"
+									alt=""></span> by Createx Studio
+						</small>
+						<a href="#" class="footer-copyrights__up-link">
+							Go to top
+						</a>
+					</div>
+				</div>
+			</div>
 		</footer>
 	</div>
 	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
