added adaptive to footer

--- a/index.html
+++ b/index.html
@@ -1144,10 +1144,10 @@
 
 						<div class="footer-column footer-middle">
 							<div class="footer-middle__column">
-								<h3 class="footer-middle__title">
+								<h3 class="footer-middle__title" data-title>
 									Site map
 								</h3>
-								<ul class="footer-middle__list">
+								<ul class="footer-middle__list" data-content>
 									<li class="footer-middle__item">
 										<a href="#" class="footer-middle__link">About us</a>
 									</li>
@@ -1167,10 +1167,10 @@
 							</div>
 
 							<div class="footer-middle__column">
-								<h3 class="footer-middle__title">
+								<h3 class="footer-middle__title" data-title>
 									Courses
 								</h3>
-								<ul class="footer-middle__list">
+								<ul class="footer-middle__list" data-content>
 									<li class="footer-middle__item">
 										<a href="#" class="footer-middle__link">Marketing</a>
 									</li>
@@ -1190,10 +1190,10 @@
 							</div>
 
 							<div class="footer-middle__column">
-								<h3 class="footer-middle__title">
+								<h3 class="footer-middle__title" data-title>
 									Contact us
 								</h3>
-								<ul class="footer-middle__list">
+								<ul class="footer-middle__list" data-content>
 									<li class="footer-middle__item">
 										<a href="tel:405550128" class="footer-middle__phone">(405) 555-0128</a>
 									</li>
@@ -1229,7 +1229,7 @@
 							© All rights reserved. Made with <span class="heart-img"><img src="img/icon/heart.svg"
 									alt=""></span> by Createx Studio
 						</small>
-						<a href="#" class="footer-copyrights__up-link">
+						<a class="footer-copyrights__up-link" id="up-btn">
 							Go to top
 						</a>
 					</div>
